# microcbor

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
cmake/: microcborConfig.cmake.in
docs/: API_REFERENCE.md  COOKBOOK.md  DESIGN.md  PORTING_GUIDE.md  TROUBLESHOOTING.md  VERIFICATION.md
include/: mcbor.h  mcbor_config.h  mcbor_config.h.in
src/: mcbor.c
tests/: Makefile  test_all.c
tests/compile_fail/: invalid_float32_zero.c  readme.md
tests/consumers/add_subdirectory/: CMakeLists.txt  main.c  main.cpp
tests/consumers/find_package/: CMakeLists.txt  main.c
tests/fuzz/: fuzz_decode.c
